<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_monthly_report"
        android:title="@string/menu_monthly_report" />
    <item
        android:id="@+id/menu_weekly_report"
        android:title="@string/menu_weekly_report" />
    <item
        android:id="@+id/menu_debt_receivables"
        android:title="@string/menu_debt_receivables" /> <!-- NEW ITEM -->
    <item
        android:id="@+id/menu_change_pin"
        android:title="@string/menu_change_pin" />
    <item
        android:id="@+id/menu_export_csv"
        android:title="@string/menu_export_csv" />
    <item
        android:id="@+id/menu_export_pdf"
        android:title="@string/menu_export_pdf" />
    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings" />
    <item
        android:id="@+id/menu_change_language"
        android:title="@string/menu_change_language" />
    <item
        android:id="@+id/menu_reset_transactions"
        android:title="@string/menu_reset_transactions" />
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about" />
</menu>
