<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/debt_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/debt_person_name_hint"
        android:inputType="textPersonName"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/debt_amount_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/debt_amount_hint"
        android:inputType="numberDecimal"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/debt_note_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/debt_note_hint"
        android:inputType="text"
        android:layout_marginBottom="12dp" />

    <Spinner
        android:id="@+id/debt_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
